# im

./: .gitignore  .travis.yml  MSync introduction.pptx  Makefile  README.md  a.config  autogen.sh  build_previous_release.sh  configure.ac  generate_appups  generate_fingerprint.sh  get_git_ver_string.sh  init_start_boot.sh  makeappup.config  readme.txt  rebar.config.script  remote.sh  run.sh  start-dev.sh  user_default.erl  vars.config.in
appups/: copy_src_orig.sh  etcdc.appup.src.orig  generate_appups.sh  im_thrift.appup.src.orig  install_appups.sh  kafka_protocol.appup.src.orig  lhttpc.appup.src.orig  message_store.appup.src.orig  msync.appup.src.orig  reset_appup.sh
appups/default/: msync.orig
include/: easemob_session.hrl  elib.hrl  jlib.hrl  logger.hrl  mod_privacy.hrl  msync_http.hrl
priv/: Makefile  msync_lib.c  msync_lib.h  msync_test.cc  multi_send.erl
priv/www/: index.html
rel/: reltool.config.script
rel/files/: msync  msync.cmd  nodetool  sys.config  vm.args
src/: dl_packet_filter.erl  easemob_message_down_low_prio_queue.erl  easemob_message_down_queue.erl  easemob_message_limit_queue.erl  easemob_message_limit_queue_sup.erl  easemob_muc.erl  easemob_session.erl  easemob_session_mnesia.erl  easemob_session_redis.erl  easemob_sync_consumer.erl  easemob_sync_lib.erl  easemob_sync_manager.erl  easemob_sync_producer.erl  easemob_sync_sup.erl  easemob_version.erl  ejabberd_bridge.erl  ejabberd_config.erl  ejabberd_license.erl  ejabberd_sm.erl  ejabberd_store.erl  elib.erl  gen_mod.erl  health_check.erl  health_check_conn_num.erl  health_check_kafka.erl  health_check_lager.erl  health_check_odbc.erl  health_check_process_queue.erl  health_check_redis.erl  health_check_session.erl  health_check_utils.erl  health_check_worker_num.erl  health_monitor.erl  media_server.erl  media_server_sup.erl  mod_message_limit.erl  mod_muc_admin.erl  msync.app.src  msync.erl  msync_app.erl  (+48 more)
src/gen-erl/: antispam_based_user_activity_constants.hrl  antispam_based_user_activity_types.hrl  behavior_service_thrift.hrl  common_constants.hrl  common_types.hrl  conference_service_thrift.hrl  easemob_constants.hrl  easemob_service_thrift.hrl  easemob_types.hrl  keyword_constants.hrl  keyword_types.hrl  media_constants.hrl  media_types.hrl  rtc_service_constants.hrl  rtc_service_thrift.hrl  rtc_service_types.hrl  text_parse_service_thrift.hrl  user_constants.hrl  user_service_constants.hrl  user_service_thrift.hrl  user_service_types.hrl  user_types.hrl
test/: app_docker.config  build.sh  config.sh  cover.spec  msync_SUITE.erl  msync_muc_bridge_tests.erl  msync_route_tests.erl  sdb-ali-hangzhou-ejabberd5.ct.config  show_binary.c  show_binary.erl  sys_docker.config  tcp_client.erl  test_ns_muc2.erl  test_ns_roster2.erl  test_show_binary  user_thrift_server.erl  wangchunye.ct.config  zhaoyun.ct.config
tools/: activate_easemob_license  backdoor.erl  generate_license_data
